--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Modak&family=Monofett&family=Pacifico&family=Passions+Conflict&family=Poppins:wght@300&family=Righteous&family=Roboto&family=Roboto+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Kalam&family=Sofia+Sans+Semi+Condensed:ital,wght@0,600;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #000;
   overflow-x: hidden; /* Limits from scrolling horizontally*/
@@ -295,7 +300,6 @@ p {
   position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
@@ -326,7 +330,7 @@ p {
 }
 
 .prereq-img {
-  width: 100%;
+  width: 120%;
   height: auto;
   object-fit: contain;
 }
@@ -355,6 +359,7 @@ p {
   border: 1px solid #fff;
   border-radius: 35px;
   transform: rotateY(180deg);
+  padding: 15px;
 }
 
 .aboutme {
@@ -479,16 +484,88 @@ p {
   margin-bottom: 3px;
 }
 
+.card-1-text .card-2-text .card-3-text .card-4-text {
+  text-align: justify;
+}
+
+h4 {
+  text-align: center;
+}
+
 .about-header {
   color: #fff;
 }
 
+.about-text-container {
+  width: 25%;
+}
+
+.about-paragraph {
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  text-indent: 30px;
+  size: 8px;
+}
+
 .footer {
   width: 100%;
-  height: 750px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-title-container {
   display: flex;
   justify-content: center;
-  background-color: purple;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  width: 70%;
+  margin-bottom: 40px;
+}
+
+.footer-intro {
+  font-size: 50px;
+}
+
+.footer-paragraph {
+  font-size: 20px;
+  font-family: "Open Sans", sans;
+}
+
+.footer-socials-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.insta-img {
+  filter: invert(99%) sepia(1%) saturate(995%) hue-rotate(222deg)
+    brightness(116%) contrast(100%);
+  width: 60px;
+}
+
+.linkedin-img {
+  filter: invert(99%) sepia(1%) saturate(995%) hue-rotate(222deg)
+    brightness(116%) contrast(100%);
+  width: 60px;
+}
+
+.mail-img {
+  filter: invert(99%) sepia(1%) saturate(995%) hue-rotate(222deg)
+    brightness(116%) contrast(100%);
+  width: 60px;
+}
+
+.resume-img {
+  filter: invert(99%) sepia(1%) saturate(995%) hue-rotate(222deg)
+    brightness(116%) contrast(100%);
+  width: 60px;
 }
 
 /* Animations */
